Add cluster restart test with quorum queues